--- a/styles/main.css
+++ b/styles/main.css
@@ -11,12 +11,22 @@
 	width: auto;
 }
 
+/*==============================*/
+/*===HEADER and NAVIGATION======*/
+/*==============================*/
+
+
 header {
-	background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(images/grandma.jpg);
+	background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url(images/grandma.jpg);
 	background-size: cover;
 	background-position: center;
 	height: 100vh;
 	background-attachment: fixed;
+}
+
+.navbar-nav li {
+	text-transform: uppercase;
+	background-color: #fff;
 }
 
 .hero-text-box {
@@ -37,4 +47,35 @@ header {
 	font-size: 100%;
 	color: #fff;
 	text-transform: uppercase;
+}
+
+button {
+	background-color: #f26822;
+}
+
+button:hover {
+  background-color: #fff;
+}
+
+/*==============================*/
+/*======BLURB SECTIONS=======*/
+/*==============================*/
+
+.blurb-section {
+	background-color: rgba(182,214,172,.3);
+	height: 25vh;
+	color: #58585a;
+	font-size: 300%;
+	padding: 20px 20px;
+
+}
+/*==============================*/
+/*======PROCESS SECTIONS=======*/
+/*==============================*/
+
+.process-section {
+	// background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(images/nurse.jpg);
+	// background-size: cover;
+	// background-position: center;
+	height:75vh;
 }
