--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
-.container {
-	background-color: pink;
-}
+// .container {
+// 	background-color: pink;
+// }
 
 /*==============================*/
 /*======REUSABLE ELEMENTS=======*/
@@ -77,5 +77,75 @@ button:hover {
 	// background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(images/nurse.jpg);
 	// background-size: cover;
 	// background-position: center;
-	height:75vh;
+	height:100vh;
 }
+
+
+/*==============================*/
+/*======OFFICE SECTION=======*/
+/*==============================*/
+
+.office-section {
+	background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url(images/chicago.jpg);
+	background-size: cover;
+	background-position: center;
+	height: 100vh;
+}
+
+
+
+/*==============================*/
+/*======TESTIMONY SECTION=======*/
+/*==============================*/
+
+.testimony-section {
+	//background-color: lightgrey;
+	height: 75vh;
+	margin-top: 10px;
+}
+
+blockquote {
+	color: #3c8f7e;
+	padding: 2%;
+	font-style: italic;
+	line-height: 145%;
+	position: relative;
+	margin-top: 40px;
+}
+
+ blockquote:before {
+ 	content:"\201C";
+ 	font-size: 500%;
+ 	display: block;
+ 	position: absolute;
+ 	top: -5px;
+ 	left: 3px;
+ }
+
+
+ cite {
+ 	font-size: 90%;
+ 	margin-top: 25px;
+ 	display: block;
+ }
+
+ cite img {
+ 	height: 45px;
+ 	border-radius: 50%;
+ 	margin-right: 10px;
+ 	vertical-align: middle;
+ }
+
+
+
+/*==============================*/
+/*======FORM SECTION=======*/
+/*==============================*/
+
+form {
+	//background-color: blue;
+
+}
+
+
+
