--- a/styles/main.css
+++ b/styles/main.css
@@ -5,11 +5,34 @@
 /*==============================*/
 /*======REUSABLE ELEMENTS=======*/
 /*==============================*/
-
-.logo {
-	height: 10%;
-	width: auto;
+body {
+	font-family: 'Lato', sans-serif;
 }
+
+
+
+
+h1, 
+h2,
+h3,
+h4 {
+	font-weight: 300;
+	text-transform: uppercase;
+	
+	
+}
+
+h2 {
+	color: #fff;
+}
+
+img.icon {
+	font-size: 350%;
+	display: inline-block;
+	color: #e67e22;
+	margin-bottom: 10px;
+}
+
 
 /*==============================*/
 /*===HEADER and NAVIGATION======*/
@@ -17,28 +40,72 @@
 
 
 header {
-	background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url(images/grandma.jpg);
+	background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.3)), url(images/grandma.jpg);
 	background-size: cover;
 	background-position: center;
 	height: 100vh;
 	background-attachment: fixed;
+
+}
+
+
+.hero-text-box {
+	position: absolute;
+	width: 50%;
+	top: 50%;
+	left: 70%;
+	-webkit-transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+	//background-color: pink;
+}
+
+
+.logo {
+	height: 100px;
+	width: auto;
+	float: left;
+	margin-top: 10px;
+	margin-left: 50px;
+}
+
+
+
+.navbar-nav {
+	float: right;
+	padding-right: 35px;
+	//background-color: rgba(255,255,255,.5);
 }
 
 .navbar-nav li {
-	text-transform: uppercase;
-	background-color: #fff;
+	display: inline-block;
+	margin-top: 25px;
+	margin-left: 5px;
+	margin-right: 5px;
 }
 
-.hero-text-box {
-	text-align: center;
-	position: absolute;
-	top: 45%;
-	left: 40%;
-	padding: 10px 10px;
+.navbar-nav li a:link,
+.navbar-nav li a:visited {
+	padding: 15px 1px;
+	color: #fff;
+	text-decoration: none;
+	text-transform: uppercase;
+	font-size: 95%;
+	border-bottom: 2px solid transparent;
+	transition: border-bottom 2s;
 }
+
+.main-nav li a:hover,
+.main-nav li a:active {
+	color: #e67e22;
+	border-bottom: 2px solid #e67e22;
+}	
+
+
 
 .hero-text {
-	font-size: 300%;
+	font-size: 500%;
+	font-weight: 300;
 	color: #fff;
 	text-transform: uppercase;
 }
@@ -100,7 +167,7 @@ button:hover {
 
 .testimony-section {
 	//background-color: lightgrey;
-	height: 75vh;
+	height: 100vh;
 	margin-top: 10px;
 }
 
