--- a/styles/main.css
+++ b/styles/main.css
@@ -26,8 +26,14 @@ h2 {
 	color: #fff;
 }
 
+
+// .icon {
+// 	margin-left: 10%;
+// }
+
 img.icon {
 	font-size: 350%;
+	margin-left: 20%;
 	display: inline-block;
 	color: #e67e22;
 	margin-bottom: 10px;
@@ -166,7 +172,7 @@ button:hover {
 /*==============================*/
 
 .testimony-section {
-	//background-color: lightgrey;
+	background-color: rgba(88,88,90,.1);
 	height: 100vh;
 	margin-top: 10px;
 }
@@ -192,15 +198,15 @@ blockquote {
 
  cite {
  	font-size: 90%;
- 	margin-top: 25px;
+ 	margin-top: 5px;
  	display: block;
  }
 
  cite img {
- 	height: 45px;
+ 	height: 60px;
  	border-radius: 50%;
- 	margin-right: 10px;
- 	vertical-align: middle;
+ 	//margin-right: 10px;
+ 	//vertical-align: middle;
  }
 
 
