--- a/styles/main.css
+++ b/styles/main.css
@@ -9,7 +9,10 @@ body {
 	font-family: 'Lato', sans-serif;
 }
 
-
+h1 {
+	padding-top: 7%;
+	margin: 0;
+}
 
 
 h1, 
@@ -75,6 +78,14 @@ header {
 	margin-left: 50px;
 }
 
+.logo-small {
+	display: none;
+	height: 40px;
+	width: auto;
+	float: left;
+	margin-top: 15px;
+	margin-left: 55px;
+}
 
 
 .navbar-nav {
@@ -130,20 +141,61 @@ button:hover {
   background-color: #fff;
 }
 
+
+/*==============================*/
+/*======STICKY NAVIGATION=======*/
+/*==============================*/
+
+.sticky {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 10%;
+	background-color: rgba(255,255,255,.7);
+	//background-color: red;
+	//box-shadow: 0 2px 2px #fefefe;
+	box-shadow: 0 2px 2px #fefefe;
+	z-index: 9999;
+}
+
+.sticky .main-nav {
+	margin-top: 10px;
+}
+
+
+.sticky .navbar-nav li a:link,
+.sticky .navbar-nav li a:visited {
+	padding: 1px 1px;
+	color: #555;
+	
+}
+.sticky .logo {
+	display: none;
+}
+
+.sticky .logo-small {
+	display: block;
+}
+
+
+
+
+
 /*==============================*/
 /*======BLURB SECTIONS=======*/
 /*==============================*/
 
-.blurb-section {
-	background-color: rgba(182,214,172,.3);
-	height: 25vh;
-	color: #58585a;
-	font-size: 300%;
-	padding: 20px 20px;
+// .blurb-section {
+// 	background-color: rgba(182,214,172,.3);
+// 	height: 50vh;
+// 	color: #58585a;
+// 	font-size: 300%;
+// 	padding: 20px 20px;
 
-}
+// }
 /*==============================*/
-/*======PROCESS SECTIONS=======*/
+/*======HOW IT WORKS SECTIONS=======*/
 /*==============================*/
 
 .process-section {
@@ -209,6 +261,10 @@ blockquote {
  	//vertical-align: middle;
  }
 
+/*==============================*/
+/*======CAREERS SECTION=======*/
+/*==============================*/
+
 
 
 /*==============================*/
@@ -220,5 +276,14 @@ form {
 
 }
 
+.js--wp-1 {
+	opacity: 0;
+	-webkit-animation-duration: 1s;
+	animation-duration: 1s;
+}
 
+
+.js--wp-1.animated {
+	opacity: 1;
+}
 
