--- a/styles/main.css
+++ b/styles/main.css
@@ -224,7 +224,6 @@ button:hover {
 /*==============================*/
 
 .testimony-section {
-	background-color: rgba(88,88,90,.1);
 	height: 100vh;
 	margin-top: 10px;
 }
@@ -271,19 +270,111 @@ blockquote {
 /*======FORM SECTION=======*/
 /*==============================*/
 
-form {
+//form {
 	//background-color: blue;
 
+//}
+
+// .js--wp-1 {
+// 	opacity: 0;
+// 	-webkit-animation-duration: 1s;
+// 	animation-duration: 1s;
+// }
+
+
+// .js--wp-1 .animated {
+// 	opacity: 1;
+// }
+
+/*==============================*/
+/*======ANIMATED=======*/
+/*==============================*/
+
+
+
+/*========================*/
+/*FOOTER*/
+/*========================*/
+
+footer {
+	background-color: #333; 
+	padding: 50px;
+	font-size: 90%;
+	width: 100%;
 }
 
-.js--wp-1 {
-	opacity: 0;
-	-webkit-animation-duration: 1s;
-	animation-duration: 1s;
+.footer-nav {
+	list-style: none;
+	float: left;
+}
+
+.social-links {
+	list-style: none;
+	float: right;
+}
+
+.footer-nav li,
+.social-links li {
+	display: inline-block;
+	margin-right: 20px;
+} 
+
+
+.footer-nav li:last-child,
+.social-links li:last-child {
+	margin-right: 0;
+} 
+
+.footer-nav li a:link,
+.footer-nav li a:visited,
+.social-links li a:link,
+.social-links li a:visited {
+	text-decoration: none;
+	border: 0;
+	color: #888;
+	transition: color 0.2s;
 }
 
 
-.js--wp-1.animated {
-	opacity: 1;
+.footer-nav li a:hover,
+.footer-nav li a:active {
+	color: #ddd;
 }
+
+.social-links li a:link,
+.social-links li a:visited {
+	font-size: 160%;
+}
+
+.ion-social-facebook,
+.ion-social-twitter,
+.ion-social-googleplus,
+.ion-social-instagram {
+	transition: color 0.2s;
+}
+
+
+.ion-social-facebook:hover {
+	color: #3b5998;
+}
+
+.ion-social-twitter:hover {
+	color: #00aced;
+}
+
+.ion-social-googleplus:hover {
+	color: #dd4b39;
+}
+
+.ion-social-instagram:hover {
+	color: #517fa4;
+}
+
+footer p {
+	color: #888;
+	text-align: center;
+	margin-top: 30px;
+}
+
+
 
