--- a/styles/main.css
+++ b/styles/main.css
@@ -201,8 +201,6 @@ button:hover {
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
-
-
 	height: 50vh;
 	color: #58585a;
 	color: #fff;
@@ -211,6 +209,32 @@ button:hover {
 
 }
 
+
+.blurb-section-two {
+	background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.3)), url(images/hospice.jpg);
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
+	height: 50vh;
+	color: #58585a;
+	color: #fff;
+	//font-size: 300%;
+	//padding: 20px 20px;
+
+}
+
+.blurb-section-three {
+	background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.3)), url(images/flu-shot.jpg);
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
+	height: 50vh;
+	color: #58585a;
+	color: #fff;
+	//font-size: 300%;
+	//padding: 20px 20px;
+
+}
 
 h3, 
  {
